# starwarrior

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindHecate.cmake  FindSDL_gfx.cmake
include/: EntityFactory.h
include/components/: Enemy.h  Expires.h  Health.h  Player.h  SpatialForm.h  Transform.h  Velocity.h  Weapon.h
include/spatials/: EnemyShip.h  Explosion.h  Missile.h  PlayerShip.h  Spatial.h
include/systems/: CollisionSystem.h  EnemyShipMovementSystem.h  EnemyShooterSystem.h  EnemySpawnSystem.h  ExpirationSystem.h  HealthBarRenderSystem.h  HudRenderSystem.h  MovementSystem.h  PlayerShipControlSystem.h  RenderSystem.h
include/utils/: utils.h
src/: CMakeLists.txt  EntityFactory.cpp  StarWarrior.cpp
src/components/: CMakeLists.txt  Enemy.cpp  Expires.cpp  Health.cpp  Player.cpp  SpatialForm.cpp  Transform.cpp  Velocity.cpp  Weapon.cpp
src/spatials/: CMakeLists.txt  EnemyShip.cpp  Explosion.cpp  Missile.cpp  PlayerShip.cpp  Spatial.cpp
src/systems/: CMakeLists.txt  CollisionSystem.cpp  EnemyShipMovementSystem.cpp  EnemyShooterSystem.cpp  EnemySpawnSystem.cpp  ExpirationSystem.cpp  HealthBarRenderSystem.cpp  HudRenderSystem.cpp  MovementSystem.cpp  PlayerShipControlSystem.cpp  RenderSystem.cpp
src/utils/: utils.cpp
